[gd_scene load_steps=10 format=3 uid="uid://c6ay0oyp81a3t"]

[ext_resource type="Script" uid="uid://bk2r05vtmcefb" path="res://scripts/dun_cell.gd" id="1_urtcp"]

[sub_resource type="PlaneMesh" id="PlaneMesh_jhou7"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_urtcp"]
data = PackedVector3Array(1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_hqbfh"]
data = PackedVector3Array(1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1)

[sub_resource type="BoxMesh" id="BoxMesh_qfbl3"]
size = Vector3(2, 3, 0.1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_wtdlu"]
data = PackedVector3Array(-1, 1.5, 0.049999997, 1, 1.5, 0.049999997, -1, -1.5, 0.049999997, 1, 1.5, 0.049999997, 1, -1.5, 0.049999997, -1, -1.5, 0.049999997, 1, 1.5, -0.049999997, -1, 1.5, -0.049999997, 1, -1.5, -0.049999997, -1, 1.5, -0.049999997, -1, -1.5, -0.049999997, 1, -1.5, -0.049999997, 1, 1.5, 0.049999997, 1, 1.5, -0.049999997, 1, -1.5, 0.049999997, 1, 1.5, -0.049999997, 1, -1.5, -0.049999997, 1, -1.5, 0.049999997, -1, 1.5, -0.049999997, -1, 1.5, 0.049999997, -1, -1.5, -0.049999997, -1, 1.5, 0.049999997, -1, -1.5, 0.049999997, -1, -1.5, -0.049999997, 1, 1.5, 0.049999997, -1, 1.5, 0.049999997, 1, 1.5, -0.049999997, -1, 1.5, 0.049999997, -1, 1.5, -0.049999997, 1, 1.5, -0.049999997, -1, -1.5, 0.049999997, 1, -1.5, 0.049999997, -1, -1.5, -0.049999997, 1, -1.5, 0.049999997, 1, -1.5, -0.049999997, -1, -1.5, -0.049999997)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_03nra"]
data = PackedVector3Array(-1, 1.5, 0.049999997, 1, 1.5, 0.049999997, -1, -1.5, 0.049999997, 1, 1.5, 0.049999997, 1, -1.5, 0.049999997, -1, -1.5, 0.049999997, 1, 1.5, -0.049999997, -1, 1.5, -0.049999997, 1, -1.5, -0.049999997, -1, 1.5, -0.049999997, -1, -1.5, -0.049999997, 1, -1.5, -0.049999997, 1, 1.5, 0.049999997, 1, 1.5, -0.049999997, 1, -1.5, 0.049999997, 1, 1.5, -0.049999997, 1, -1.5, -0.049999997, 1, -1.5, 0.049999997, -1, 1.5, -0.049999997, -1, 1.5, 0.049999997, -1, -1.5, -0.049999997, -1, 1.5, 0.049999997, -1, -1.5, 0.049999997, -1, -1.5, -0.049999997, 1, 1.5, 0.049999997, -1, 1.5, 0.049999997, 1, 1.5, -0.049999997, -1, 1.5, 0.049999997, -1, 1.5, -0.049999997, 1, 1.5, -0.049999997, -1, -1.5, 0.049999997, 1, -1.5, 0.049999997, -1, -1.5, -0.049999997, 1, -1.5, 0.049999997, 1, -1.5, -0.049999997, -1, -1.5, -0.049999997)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_0bivh"]
data = PackedVector3Array(-1, 1.5, 0.049999997, 1, 1.5, 0.049999997, -1, -1.5, 0.049999997, 1, 1.5, 0.049999997, 1, -1.5, 0.049999997, -1, -1.5, 0.049999997, 1, 1.5, -0.049999997, -1, 1.5, -0.049999997, 1, -1.5, -0.049999997, -1, 1.5, -0.049999997, -1, -1.5, -0.049999997, 1, -1.5, -0.049999997, 1, 1.5, 0.049999997, 1, 1.5, -0.049999997, 1, -1.5, 0.049999997, 1, 1.5, -0.049999997, 1, -1.5, -0.049999997, 1, -1.5, 0.049999997, -1, 1.5, -0.049999997, -1, 1.5, 0.049999997, -1, -1.5, -0.049999997, -1, 1.5, 0.049999997, -1, -1.5, 0.049999997, -1, -1.5, -0.049999997, 1, 1.5, 0.049999997, -1, 1.5, 0.049999997, 1, 1.5, -0.049999997, -1, 1.5, 0.049999997, -1, 1.5, -0.049999997, 1, 1.5, -0.049999997, -1, -1.5, 0.049999997, 1, -1.5, 0.049999997, -1, -1.5, -0.049999997, 1, -1.5, 0.049999997, 1, -1.5, -0.049999997, -1, -1.5, -0.049999997)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ixfq0"]
data = PackedVector3Array(-1, 1.5, 0.049999997, 1, 1.5, 0.049999997, -1, -1.5, 0.049999997, 1, 1.5, 0.049999997, 1, -1.5, 0.049999997, -1, -1.5, 0.049999997, 1, 1.5, -0.049999997, -1, 1.5, -0.049999997, 1, -1.5, -0.049999997, -1, 1.5, -0.049999997, -1, -1.5, -0.049999997, 1, -1.5, -0.049999997, 1, 1.5, 0.049999997, 1, 1.5, -0.049999997, 1, -1.5, 0.049999997, 1, 1.5, -0.049999997, 1, -1.5, -0.049999997, 1, -1.5, 0.049999997, -1, 1.5, -0.049999997, -1, 1.5, 0.049999997, -1, -1.5, -0.049999997, -1, 1.5, 0.049999997, -1, -1.5, 0.049999997, -1, -1.5, -0.049999997, 1, 1.5, 0.049999997, -1, 1.5, 0.049999997, 1, 1.5, -0.049999997, -1, 1.5, 0.049999997, -1, 1.5, -0.049999997, 1, 1.5, -0.049999997, -1, -1.5, 0.049999997, 1, -1.5, 0.049999997, -1, -1.5, -0.049999997, 1, -1.5, 0.049999997, 1, -1.5, -0.049999997, -1, -1.5, -0.049999997)

[node name="DunCell" type="Node3D"]
script = ExtResource("1_urtcp")

[node name="ceiling" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
mesh = SubResource("PlaneMesh_jhou7")

[node name="StaticBody3D" type="StaticBody3D" parent="ceiling"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ceiling/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_urtcp")

[node name="floor" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_jhou7")

[node name="StaticBody3D" type="StaticBody3D" parent="floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_hqbfh")

[node name="wall_front" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -0.95)
mesh = SubResource("BoxMesh_qfbl3")

[node name="StaticBody3D" type="StaticBody3D" parent="wall_front"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="wall_front/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_wtdlu")

[node name="wall_back" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0.95)
mesh = SubResource("BoxMesh_qfbl3")

[node name="StaticBody3D" type="StaticBody3D" parent="wall_back"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="wall_back/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_03nra")

[node name="wall_left" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -0.95, 1.5, 0)
mesh = SubResource("BoxMesh_qfbl3")

[node name="StaticBody3D" type="StaticBody3D" parent="wall_left"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="wall_left/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_0bivh")

[node name="wall_right" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0.95, 1.5, 0)
mesh = SubResource("BoxMesh_qfbl3")

[node name="StaticBody3D" type="StaticBody3D" parent="wall_right"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="wall_right/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_ixfq0")
